Fix leaderboard + hide scrollbar on startpage

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -198,6 +198,16 @@ h2 {
     max-height: 60vh;
 }
 
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+
 .leaderboard hr {
     color: var(--primary-color);
     width: 90%;
